--- a/themes/rcforward/sass/_variables.scss
+++ b/themes/rcforward/sass/_variables.scss
@@ -39,7 +39,7 @@ $gotham__font: 'Montserrat Light', sans-serif;
 // RC Mixins
 $tablet-width: 600px;
 $desktop-width: 1000px;
-$max-screen-size: 1240px;
+$max-screen-size: 1440px;
 
 // Typography
 
@@ -52,3 +52,4 @@ $font__line-height-pre: 1.6;
 //padding
 
 $button__padding: 1rem 1.5rem;
+$content__padding: 2rem 6rem;
