--- a/themes/rcforward/sass/_flickity.scss
+++ b/themes/rcforward/sass/_flickity.scss
@@ -11,6 +11,7 @@
 .flickity-viewport {
     position: relative;
     height:270px;
+
 //  &::before {
 //     content: '';
 //     left: 0;
@@ -64,16 +65,13 @@ ol.flickity-page-dots{
     }
 }
 .carousel-cell {
-    box-shadow: 0px 2px 2px $innovative__purple;
+    @include box-shadow();
     width: 23.5%; /* half-width */
     height: 230px;
-    margin: 0 1%;
-    border-radius: 10px;
+    margin: 0 5px;
+    
     overflow: hidden;
-    border:1px solid lighten($innovative__purple,50%);
-    &:hover{
-        box-shadow: 0px 3px 5px $innovative__purple;
-    }
+   
     img{
         max-width: 100%;
         max-height:100%;
