--- a/themes/rcforward/sass/_mixins.scss
+++ b/themes/rcforward/sass/_mixins.scss
@@ -33,3 +33,25 @@
   justify-content: $justifyContent;
   align-items: $alignItems;
 }
+
+@mixin box-shadow(){
+    border-radius: 10px;
+    border:1px solid lighten($innovative__purple,50%);
+    box-shadow: 0px 2px 2px $innovative__purple;
+    &:hover{
+        box-shadow: 0px 3px 5px $innovative__purple;
+    }
+}
+
+@mixin button($background-color: $innovative__purple){
+    padding:$button__padding;
+    background-color:$background-color;
+    border-radius: 7px;
+    width:10rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:white;
+    text-align: center;
+    margin: 0 auto;
+}
