add style to front page header

--- a/themes/rcforward/sass/_front-page.scss
+++ b/themes/rcforward/sass/_front-page.scss
@@ -50,7 +50,10 @@
 .home{
     text-align:center;
     .entry-header{
-        
+        display:flex;
+        .header-content{
+            flex-basis:50%;
+        }
     }
 
     .choose-fund{
