--- a/themes/rcforward/sass/_variables.scss
+++ b/themes/rcforward/sass/_variables.scss
@@ -34,12 +34,12 @@ $black: #000;
 $white: #fff;
 
 // RC Fonts
-$gotham__font: 'Montserrat Light', sans-serif;
+$montserrat__font: 'Montserrat', sans-serif;
 
 // RC Mixins
-$tablet-width: 600px;
+$tablet-width: 650px;
 $desktop-width: 1000px;
-$max-screen-size: 1240px;
+$max-screen-size: 1440px;
 
 // Typography
 
