add variables.scss and add custom plan in howit works page

--- a/themes/rcforward/sass/_front-page.scss
+++ b/themes/rcforward/sass/_front-page.scss
@@ -50,9 +50,21 @@
 .home{
     text-align:center;
     .entry-header{
+        padding:$content__padding;
         display:flex;
         .header-content{
             flex-basis:50%;
+            a{
+                // @include button();
+                // display:inline-block;
+                width:8rem;
+                margin:auto 1rem;
+            }
+            .donate-page-button{
+                color:$code__blue;
+                border:1px solid $code__blue;
+
+            }
         }
     }
 
