--- a/themes/rcforward/sass/_variables.scss
+++ b/themes/rcforward/sass/_variables.scss
@@ -36,10 +36,11 @@ $white: #fff;
 // RC Fonts
 $gotham__font: 'Montserrat Light', sans-serif;
 
-// RC Mixins
+// Screen Size
 $tablet-width: 600px;
 $desktop-width: 1000px;
 $max-screen-size: 1440px;
+$max-content-size: 900px;
 
 // Typography
 
